--- a/stories/it/0052_simbegwire_slides.html
+++ b/stories/it/0052_simbegwire_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
-<p>Un giorno, il papà di Simbegwire tornò a casa più tardi del solito. &quot;Dove sei bambina mia?&quot; La chiamò. Simbegwire corse dal padre. Si fermò immobile quando vide che teneva per mano una donna. &quot;Voglio presentarti qualcuno di speciale, bambina mia. Questa è Anita&quot; Disse sorridendo.</p>
+<p>Un giorno, il papà di Simbegwire tornò a casa più tardi del solito. &quot;Dove sei bambina mia?&quot; La chiamò. Simbegwire corse dal padre. Si fermò immobile quando vide che teneva per mano una donna. &quot;Voglio presentarti qualcuno di speciale, bambina mia. Questa è Anita,&quot; disse sorridendo.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
-<p>&quot;Ciao Simbegwire, tuo padre mi ha parlato molto di te&quot; Disse Anita, ma non sorrise o prese la mano della bambina. Il papà di Simbegwire era emozionato e felice. Parlò di andare a vivere loro tre insieme e di come sarebbe bella la loro vita. &quot;Bambina mia, spero accetterai Anita come la tua nuova madre&quot; Disse.</p>
+<p>&quot;Ciao Simbegwire, tuo padre mi ha parlato molto di te,&quot; disse Anita, ma non sorrise o prese la mano della bambina. Il papà di Simbegwire era emozionato e felice. Parlò di andare a vivere loro tre insieme e di come sarebbe bella la loro vita. &quot;Bambina mia, spero accetterai Anita come la tua nuova madre,&quot; disse.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
-<p>Dopo alcuni mesi, il papà di Simbegwire disse loro che sarebbe stato via di casa per un po'. &quot;Devo viaggiare per lavoro&quot; Disse:&quot; Ma so che vi prenderete cura l'una dell'altra.&quot; Simbegwire aveva un' espressione triste ma suo padre non la notò. Anita non disse nulla, non era felice nemmeno lei.</p>
+<p>Dopo alcuni mesi, il papà di Simbegwire disse loro che sarebbe stato via di casa per un po'. &quot;Devo viaggiare per lavoro,&quot; disse: &quot;Ma so che vi prenderete cura l'una dell'altra.&quot; Simbegwire aveva un' espressione triste ma suo padre non la notò. Anita non disse nulla, non era felice nemmeno lei.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>Quando il padre di Simbegwire tornò a casa, trovo la sua cameretta vuota. &quot;Cosa è successo Anita?&quot; Chiese con il cuore pesante. La donna spiegò che Simbegwire era scappata via. &quot; Volevo che mi rispettasse&quot; Disse. &quot;Ma forse sono stata troppo severa.&quot; Il papà di Simbegwire lasciò casa e andò in direzione del ruscello. Raggiunse il villaggio della sorella e scoprì che lei aveva visto Simbegwire.</p>
+<p>Quando il padre di Simbegwire tornò a casa, trovo la sua cameretta vuota. &quot;Cosa è successo Anita?&quot; Chiese con il cuore pesante. La donna spiegò che Simbegwire era scappata via. &quot;Volevo che mi rispettasse,&quot; disse. &quot;Ma forse sono stata troppo severa.&quot; Il papà di Simbegwire lasciò casa e andò in direzione del ruscello. Raggiunse il villaggio della sorella e scoprì che lei aveva visto Simbegwire.</p>
 <center>
 <strong>13</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
-<p>Suo padre la visitò ogni giorno. Una volta venne con Anita. Lei prese la mano di Simbegwire. &quot;Ti chiedo scusa piccolina, mi sbagliavo.&quot; Pianse &quot;Mi daresti un'altra possibilità?&quot; Simbegwire guardò suo padre e la sua faccia preoccupata. Poi, lentamente, fece un passo verso Anita e la abbracciò.</p>
+<p>Suo padre la visitò ogni giorno. Una volta venne con Anita. Lei prese la mano di Simbegwire. &quot;Ti chiedo scusa piccolina, mi sbagliavo,&quot; pianse. &quot;Mi daresti un'altra possibilità?&quot; Simbegwire guardò suo padre e la sua faccia preoccupata. Poi, lentamente, fece un passo verso Anita e la abbracciò.</p>
 <center>
 <strong>15</strong>
 </center>
