--- a/stories/it/0066_nozibele-e-i-tre-capelli.html
+++ b/stories/it/0066_nozibele-e-i-tre-capelli.html
@@ -98,14 +98,14 @@ Tessa Welch<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
 
-<p>Poi il cane disse: “Cucina per me!” “Ma io non ho mai cucinato per un cane prima d’ora” Rispose lei. “Cucina o ti mordo!” Disse il cane. Così Nozibele cucinò un po’ di cibo per il cane.</p>
+<p>Poi il cane disse: “Cucina per me!” “Ma io non ho mai cucinato per un cane prima d’ora,” rispose lei. “Cucina o ti mordo!” Disse il cane. Così Nozibele cucinò un po’ di cibo per il cane.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
 
-<p>Poi il cane disse “Fammi il letto!” Nozibele rispose: “Non ho mai fatto un letto per un cane prima d’ora.” “Fammi il letto o ti mordo!” Disse il cane. Così Nozibele gli fece il letto.</p>
+<p>Poi il cane disse: “Fammi il letto!” Nozibele rispose: “Non ho mai fatto un letto per un cane prima d’ora.” “Fammi il letto o ti mordo!” Disse il cane. Così Nozibele gli fece il letto.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -126,14 +126,14 @@ Tessa Welch<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
 
-<p>Quando il cane tornò, cercò Nozibele. “Nozibele, dove sei?” gridò “Sono qui, sotto il letto.” Disse il primo capello “Sono qui, dietro la porta.” Disse il secondo capello “Sono qui, nel recinto” Disse il terzo capello.</p>
+<p>Quando il cane tornò, cercò Nozibele. “Nozibele, dove sei?” gridò “Sono qui, sotto il letto.” Disse il primo capello “Sono qui, dietro la porta.” Disse il secondo capello “Sono qui, nel recinto,” disse il terzo capello.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
 
-<p>Il cane capì che Nozibele l’aveva fregato. Così corse al villaggio. Ma I fratelli di Nozibele lo stavano aspettando con dei grandi bastoni. Il cane scappò e non lo rividero mai più.</p>
+<p>Il cane capì che Nozibele l’aveva fregato. Così corse al villaggio. Ma i fratelli di Nozibele lo stavano aspettando con dei grandi bastoni. Il cane scappò e non lo rividero mai più.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
