--- a/stories/it/0072_la-vendetta-delluccello-del-miele.html
+++ b/stories/it/0072_la-vendetta-delluccello-del-miele.html
@@ -56,7 +56,7 @@ Zulu folktale<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
 
-<p>Dopo mezz’ora, raggiunsero un grosso albero di fichi selvatici. Ngede saltò sui rami follemente. Poi, si appollaiò su uno dei rami e sollevò la testa verso Gingile come per dire “Eccolo qui! Vieni! Perché ci metti tanto?” Gingile non riusciva a vedere nemmeno un’ ape da sotto l’albero , ma si fidò di Ngede.</p>
+<p>Dopo mezz’ora, raggiunsero un grosso albero di fichi selvatici. Ngede saltò sui rami follemente. Poi, si appollaiò su uno dei rami e sollevò la testa verso Gingile come per dire “Eccolo qui! Vieni! Perché ci metti tanto?” Gingile non riusciva a vedere nemmeno un’ ape da sotto l’albero, ma si fidò di Ngede.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,14 +70,14 @@ Zulu folktale<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/05.jpg" /></p>
 
-<p>Presto riuscì a sentire il forte ronzare delle api lavoratrici. Uscivano ed entravano nella cavità dell’albero. Quando Gingile raggiunse l’alveare, vi spinse il legnetto fumante dentro. Le api si affrettarono ad uscire, arrabbiatissime! Volarono via perché a loro non piaceva il fumo - ma non prima di aver punto Gingile malamente!.</p>
+<p>Presto riuscì a sentire il forte ronzare delle api lavoratrici. Uscivano ed entravano nella cavità dell’albero. Quando Gingile raggiunse l’alveare, vi spinse il legnetto fumante dentro. Le api si affrettarono ad uscire, arrabbiatissime! Volarono via perché a loro non piaceva il fumo – ma non prima di aver punto Gingile malamente!</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
 
-<p>Quando le api se ne andarono, Gingile mise le mani nel nido. Le tirò fuori  piene di pesante favo, gocciolante di dolcissimo miele e piene di grosse e bianche larve. Con cautela, mise il favo nella sacca che portava sulle spalle e cominciò a scendere dall’albero.</p>
+<p>Quando le api se ne andarono, Gingile mise le mani nel nido. Le tirò fuori piene di pesante favo, gocciolante di dolcissimo miele e piene di grosse e bianche larve. Con cautela, mise il favo nella sacca che portava sulle spalle e cominciò a scendere dall’albero.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -91,14 +91,14 @@ Zulu folktale<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
 
-<p>Invece, Gingile spense il fuoco, prese la sua lancia e cominciò a incamminarsi verso casa, ignorando l’uccellino. Ngede cinguettò arrabbiato “VIC-torr! VIC-torr!” Gingile si fermò, fissò il piccolo uccellino e  scoppiò in una sonora risata. “Vuoi del miele amico mio? Ha! Ma ho fatto io tutto il lavoro, io mi sono beccato tutte le punture! Perché dovrei condividere anche solo un po’ di questo delizioso miele con te?” E se ne andò. Ngede era furioso! Non era questo il modo di trattarlo! Decise che si sarebbe vendicato.</p>
+<p>Invece, Gingile spense il fuoco, prese la sua lancia e cominciò a incamminarsi verso casa, ignorando l’uccellino. Ngede cinguettò arrabbiato “VIC-torr! VIC-torr!” Gingile si fermò, fissò il piccolo uccellino e scoppiò in una sonora risata. “Vuoi del miele amico mio? Ha! Ma ho fatto io tutto il lavoro, io mi sono beccato tutte le punture! Perché dovrei condividere anche solo un po’ di questo delizioso miele con te?” E se ne andò. Ngede era furioso! Non era questo il modo di trattarlo! Decise che si sarebbe vendicato.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
 
-<p>Un giorno, qualche settimana dopo, Gingile sentì di nuovo la chiamata del miele di Ngede. Ricordò il delizioso miele e avidamente seguì l’uccellino ancora una volta. Dopo aver guidato Gingile al confine della foresta, Ngede si fermò a riposare in un maestoso albero. “Ah” Pensò Gingile. “l’alveare deve essere su questo albero.” Rapidamente fece un piccolo fuoco e cominciò ad arrampicarsi con il legnetto fumante fra i denti. Ngede si sedette e guardò.</p>
+<p>Un giorno, qualche settimana dopo, Gingile sentì di nuovo la chiamata del miele di Ngede. Ricordò il delizioso miele e avidamente seguì l’uccellino ancora una volta. Dopo aver guidato Gingile al confine della foresta, Ngede si fermò a riposare in un maestoso albero. “Ah,” pensò Gingile. “l’alveare deve essere su questo albero.” Rapidamente fece un piccolo fuoco e cominciò ad arrampicarsi con il legnetto fumante fra i denti. Ngede si sedette e guardò.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -119,7 +119,7 @@ Zulu folktale<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
 
-<p>Così, quando  i bambini di Gingile ascoltano la storia di Ngede, portano rispetto al piccolo uccellino. Ogni volta che raccolgono il miele, si assicurano di lasciare la parte più grossa del favo all’uccello del miele!</p>
+<p>Così, quando i bambini di Gingile ascoltano la storia di Ngede, portano rispetto al piccolo uccellino. Ogni volta che raccolgono il miele, si assicurano di lasciare la parte più grossa del favo all’uccello del miele!</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
