--- a/stories/it/0095_zama-è-grande.html
+++ b/stories/it/0095_zama-è-grande.html
@@ -63,7 +63,7 @@ Michael Oguttu<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
 
-<p>“Tu sei la mia stella del mattino.” dice mamma.</p>
+<p>“Tu sei la mia stella del mattino,” dice mamma.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Michael Oguttu<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>Mamma mi ricorda “Non dimenticarti i denti” Io rispondo: “Mai, non io!”</p>
+<p>Mamma mi ricorda: “Non dimenticarti i denti.” Io rispondo: “Mai, non io!”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Michael Oguttu<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
 
-<p>Poi mi vesto “Ora sono grande. mamma.” Dico.</p>
+<p>Poi mi vesto. “Ora sono grande, mamma,” dico.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
