--- a/stories/it/0095_zama-è-grande_slides.html
+++ b/stories/it/0095_zama-è-grande_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>&quot;Tu sei la mia stella del mattino.&quot; dice mamma.</p>
+<p>&quot;Tu sei la mia stella del mattino,&quot; dice mamma.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>Mamma mi ricorda &quot;Non dimenticarti i denti&quot; Io rispondo: &quot;Mai, non io!&quot;</p>
+<p>Mamma mi ricorda: &quot;Non dimenticarti i denti.&quot; Io rispondo: &quot;Mai, non io!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>Poi mi vesto &quot;Ora sono grande. mamma.&quot; Dico.</p>
+<p>Poi mi vesto. &quot;Ora sono grande, mamma,&quot; dico.</p>
 <center>
 <strong>8</strong>
 </center>
