--- a/stories/it/0111_perché-gli-ippopotami-non-hanno-il-pelo_slides.html
+++ b/stories/it/0111_perché-gli-ippopotami-non-hanno-il-pelo_slides.html
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>Coniglio andò a cercare Fuoco e disse &quot; Vai a bruciare Ippopotamo quando esce dall'acqua per mangiare l'erba. Mi ha schiacciato il piede!&quot; Fuoco rispose: &quot;Non c'è problema Coniglio, mio amico. Farò quello che mi hai chiesto.&quot;</p>
+<p>Coniglio andò a cercare Fuoco e disse &quot;Vai a bruciare Ippopotamo quando esce dall'acqua per mangiare l'erba. Mi ha schiacciato il piede!&quot; Fuoco rispose: &quot;Non c'è problema Coniglio, mio amico. Farò quello che mi hai chiesto.&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>Più tardi, Ippopotamo stava mangiando l'erba lontano dal fiume quando.. &quot;Whoosh!&quot; Fuoco esplose in mille fiamme. Le fiamme incominciarono a bruciare il pelo di Ippopotamo.</p>
+<p>Più tardi, Ippopotamo stava mangiando l'erba lontano dal fiume quando: &quot;Whoosh!&quot; Fuoco esplose in mille fiamme. Le fiamme incominciarono a bruciare il pelo di Ippopotamo.</p>
 <center>
 <strong>6</strong>
 </center>
