--- a/stories/it/0158_gallina-e-aquila.html
+++ b/stories/it/0158_gallina-e-aquila.html
@@ -63,7 +63,7 @@ Ann Nduku<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
 
-<p>Dopo una buona notte di sonno e riposo, Gallina ebbe un’idea brillante. Cominciò a collezionare le piume cadute dai loro amici uccelli. “Cuciamole insieme sopra le nostre piume” Disse. “Forse questo ti renderà più facile viaggiare.”</p>
+<p>Dopo una buona notte di sonno e riposo, Gallina ebbe un’idea brillante. Cominciò a collezionare le piume cadute dai loro amici uccelli. “Cuciamole insieme sopra le nostre piume,” disse. “Forse questo ti renderà più facile viaggiare.”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -98,7 +98,7 @@ Ann Nduku<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
 
-<p>“Dammi solo un giorno” Implorò Gallina: “Poi potrai aggiustare la tua ala e volare di nuovo a prendere del cibo.”  “Solo un altro giorno!” Rispose Aquila. “Se non riesci a trovare l’ago, mi dovrai dare uno dei tuoi pulcini come pagamento.”</p>
+<p>“Dammi solo un giorno,” implorò Gallina: “Poi potrai aggiustare la tua ala e volare di nuovo a prendere del cibo.” “Solo un altro giorno!” Rispose Aquila. “Se non riesci a trovare l’ago, mi dovrai dare uno dei tuoi pulcini come pagamento.”</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Ann Nduku<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
 
-<p>Appena l’ombra delle ali di Aquila si proietta sul suolo, Gallina avvisa i suoi pulcini. “State alla larga dalla terra secca e spiazzata!” E loro rispondono:  “Non siamo sciocchi. Scapperemo”</p>
+<p>Appena l’ombra delle ali di Aquila si proietta sul suolo, Gallina avvisa i suoi pulcini. “State alla larga dalla terra secca e spiazzata!” E loro rispondono: “Non siamo sciocchi. Scapperemo”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
