--- a/stories/it/0158_gallina-e-aquila_slides.html
+++ b/stories/it/0158_gallina-e-aquila_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>Dopo una buona notte di sonno e riposo, Gallina ebbe un'idea brillante. Cominciò a collezionare le piume cadute dai loro amici uccelli. &quot;Cuciamole insieme sopra le nostre piume&quot; Disse. &quot;Forse questo ti renderà più facile viaggiare.&quot;</p>
+<p>Dopo una buona notte di sonno e riposo, Gallina ebbe un'idea brillante. Cominciò a collezionare le piume cadute dai loro amici uccelli. &quot;Cuciamole insieme sopra le nostre piume,&quot; disse. &quot;Forse questo ti renderà più facile viaggiare.&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>&quot;Dammi solo un giorno&quot; Implorò Gallina: &quot;Poi potrai aggiustare la tua ala e volare di nuovo a prendere del cibo.&quot; &quot;Solo un altro giorno!&quot; Rispose Aquila. &quot;Se non riesci a trovare l'ago, mi dovrai dare uno dei tuoi pulcini come pagamento.&quot;</p>
+<p>&quot;Dammi solo un giorno,&quot; implorò Gallina: &quot;Poi potrai aggiustare la tua ala e volare di nuovo a prendere del cibo.&quot; &quot;Solo un altro giorno!&quot; Rispose Aquila. &quot;Se non riesci a trovare l'ago, mi dovrai dare uno dei tuoi pulcini come pagamento.&quot;</p>
 <center>
 <strong>8</strong>
 </center>
