--- a/stories/it/0243_vacanze-con-la-nonna.html
+++ b/stories/it/0243_vacanze-con-la-nonna.html
@@ -84,7 +84,7 @@ Violet Otieno<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
 
-<p>Nyar-Kanyada diede loro il benvenuto nella sua casa e ballò intorno alla stanza cantando con gioia. I suoi nipotini erano emozionati di darle regali che le avevano portato dalla città. “Prima apri il mio regalo” Disse Odongo. “No, prima il mio!” disse Apiyo.</p>
+<p>Nyar-Kanyada diede loro il benvenuto nella sua casa e ballò intorno alla stanza cantando con gioia. I suoi nipotini erano emozionati di darle regali che le avevano portato dalla città. “Prima apri il mio regalo,” disse Odongo. “No, prima il mio!” disse Apiyo.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
