--- a/stories/it/0243_vacanze-con-la-nonna_slides.html
+++ b/stories/it/0243_vacanze-con-la-nonna_slides.html
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>Nyar-Kanyada diede loro il benvenuto nella sua casa e ballò intorno alla stanza cantando con gioia. I suoi nipotini erano emozionati di darle regali che le avevano portato dalla città. &quot;Prima apri il mio regalo&quot; Disse Odongo. &quot;No, prima il mio!&quot; disse Apiyo.</p>
+<p>Nyar-Kanyada diede loro il benvenuto nella sua casa e ballò intorno alla stanza cantando con gioia. I suoi nipotini erano emozionati di darle regali che le avevano portato dalla città. &quot;Prima apri il mio regalo,&quot; disse Odongo. &quot;No, prima il mio!&quot; disse Apiyo.</p>
 <center>
 <strong>6</strong>
 </center>
