--- a/stories/it/0262_magozwe_slides.html
+++ b/stories/it/0262_magozwe_slides.html
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
-<p>Magozwe era seduto sul pavimento a guardare il suo libro di figure, quando Thomas si sedette di fianco a lui. &quot;Di che parla la storia?&quot; Chiese. &quot;Di un ragazzo che diventa un pilota&quot; Rispose Magozwe. &quot;Qual è il nome del ragazzo?&quot; Chiese Thomas &quot;Non lo so, non so leggere&quot; Disse Magozwe sottovoce.</p>
+<p>Magozwe era seduto sul pavimento a guardare il suo libro di figure, quando Thomas si sedette di fianco a lui. &quot;Di che parla la storia?&quot; Chiese. &quot;Di un ragazzo che diventa un pilota,&quot; rispose Magozwe. &quot;Qual è il nome del ragazzo?&quot; Chiese Thomas &quot;Non lo so, non so leggere,&quot; disse Magozwe sottovoce.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
-<p>Magozwe pensò a questo posto nuovo e al fatto di andare a scuola. E se suo zio avesse ragione? Se lui fosse davvero troppo stupido per imparare qualcosa? E se lo avessero picchiato in questo nuovo posto? Era spaventato. &quot;Forse è meglio che rimanga a vivere per strada&quot; Pensò.</p>
+<p>Magozwe pensò a questo posto nuovo e al fatto di andare a scuola. E se suo zio avesse ragione? Se lui fosse davvero troppo stupido per imparare qualcosa? E se lo avessero picchiato in questo nuovo posto? Era spaventato. &quot;Forse è meglio che rimanga a vivere per strada,&quot; pensò.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
-<p>Magozwe era seduto nel giardino della casa dal tetto verde, a leggere un libro di storie della scuola. Thomas lo raggiunse e si sedette di fianco a lui. &quot;Di che parla la storia?&quot; Chiese Thomas. &quot;Di un ragazzo che diventa insegnante.&quot; Rispose Magozwe. &quot;Come si chiama il ragazzo?&quot; Chiese Thomas. &quot;Il suo nome è Magozwe.&quot; disse Magozwe sorridendo.</p>
+<p>Magozwe era seduto nel giardino della casa dal tetto verde, a leggere un libro di storie della scuola. Thomas lo raggiunse e si sedette di fianco a lui. &quot;Di che parla la storia?&quot; Chiese Thomas. &quot;Di un ragazzo che diventa insegnante,&quot; rispose Magozwe. &quot;Come si chiama il ragazzo?&quot; Chiese Thomas. &quot;Il suo nome è Magozwe,&quot; disse Magozwe sorridendo.</p>
 <center>
 <strong>16</strong>
 </center>
