--- a/stories/it/0294_le-banane-della-nonna.html
+++ b/stories/it/0294_le-banane-della-nonna.html
@@ -56,14 +56,14 @@ Ursula Nafula<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
 
-<p>Un giorno vidi un grosso cesto in vimini messo al sole fuori da casa della nonna. Quando gli chiesi per cosa  fosse l’unica risposta che ottenni fu “è il mio cesto magico.” Di fianco al cesto c’erano diverse foglie di banana che nonna rigirava di tanto in tanto. Ero curiosa. “ A che cosa servono le foglie nonna?” Chiesi. L’unica risposta che ricevetti fu: “sono le mie foglie magiche.”</p>
+<p>Un giorno vidi un grosso cesto in vimini messo al sole fuori da casa della nonna. Quando gli chiesi per cosa fosse l’unica risposta che ottenni fu “è il mio cesto magico.” Di fianco al cesto c’erano diverse foglie di banana che nonna rigirava di tanto in tanto. Ero curiosa. “A che cosa servono le foglie nonna?” Chiesi. L’unica risposta che ricevetti fu: “sono le mie foglie magiche.”</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
 
-<p>Era così interessante guardare nonna, le banane, le foglie di banano e il grande cesto in vimini. Ma nonna mi mandò da mia madre per una commissione. “Nonna, per favore, lasciami guardare mentre prepari..” “Non essere testarda, bambina, fai come ti viene detto” Insistette lei. E io corsi via.</p>
+<p>Era così interessante guardare nonna, le banane, le foglie di banano e il grande cesto in vimini. Ma nonna mi mandò da mia madre per una commissione. “Nonna, per favore, lasciami guardare mentre prepari.” “Non essere testarda, bambina, fai come ti viene detto,” insistette lei. E io corsi via.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
