--- a/stories/it/0294_le-banane-della-nonna_slides.html
+++ b/stories/it/0294_le-banane-della-nonna_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
-<p>Un giorno vidi un grosso cesto in vimini messo al sole fuori da casa della nonna. Quando gli chiesi per cosa fosse l'unica risposta che ottenni fu &quot;è il mio cesto magico.&quot; Di fianco al cesto c'erano diverse foglie di banana che nonna rigirava di tanto in tanto. Ero curiosa. &quot; A che cosa servono le foglie nonna?&quot; Chiesi. L'unica risposta che ricevetti fu: &quot;sono le mie foglie magiche.&quot;</p>
+<p>Un giorno vidi un grosso cesto in vimini messo al sole fuori da casa della nonna. Quando gli chiesi per cosa fosse l'unica risposta che ottenni fu &quot;è il mio cesto magico.&quot; Di fianco al cesto c'erano diverse foglie di banana che nonna rigirava di tanto in tanto. Ero curiosa. &quot;A che cosa servono le foglie nonna?&quot; Chiesi. L'unica risposta che ricevetti fu: &quot;sono le mie foglie magiche.&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>Era così interessante guardare nonna, le banane, le foglie di banano e il grande cesto in vimini. Ma nonna mi mandò da mia madre per una commissione. &quot;Nonna, per favore, lasciami guardare mentre prepari..&quot; &quot;Non essere testarda, bambina, fai come ti viene detto&quot; Insistette lei. E io corsi via.</p>
+<p>Era così interessante guardare nonna, le banane, le foglie di banano e il grande cesto in vimini. Ma nonna mi mandò da mia madre per una commissione. &quot;Nonna, per favore, lasciami guardare mentre prepari.&quot; &quot;Non essere testarda, bambina, fai come ti viene detto,&quot; insistette lei. E io corsi via.</p>
 <center>
 <strong>3</strong>
 </center>
