--- a/stories/it/0315_la-canzone-di-sakima.html
+++ b/stories/it/0315_la-canzone-di-sakima.html
@@ -119,7 +119,7 @@ Ursula Nafula<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
 
-<p>“Io posso cantare per lui, potrebbe renderlo felice di nuovo” Disse Sakima ai suoi genitori. Ma i suoi genitori lo destituirono. “Lui è molto ricco, tu sei solo un ragazzo cieco. Pensi che la tua canzone lo aiuterà?”</p>
+<p>“Io posso cantare per lui, potrebbe renderlo felice di nuovo,” disse Sakima ai suoi genitori. Ma i suoi genitori lo destituirono. “Lui è molto ricco, tu sei solo un ragazzo cieco. Pensi che la tua canzone lo aiuterà?”</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
