--- a/stories/it/0315_la-canzone-di-sakima_slides.html
+++ b/stories/it/0315_la-canzone-di-sakima_slides.html
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
-<p>&quot;Io posso cantare per lui, potrebbe renderlo felice di nuovo&quot; Disse Sakima ai suoi genitori. Ma i suoi genitori lo destituirono. &quot;Lui è molto ricco, tu sei solo un ragazzo cieco. Pensi che la tua canzone lo aiuterà?&quot;</p>
+<p>&quot;Io posso cantare per lui, potrebbe renderlo felice di nuovo,&quot; disse Sakima ai suoi genitori. Ma i suoi genitori lo destituirono. &quot;Lui è molto ricco, tu sei solo un ragazzo cieco. Pensi che la tua canzone lo aiuterà?&quot;</p>
 <center>
 <strong>11</strong>
 </center>
