--- a/stories/it/0342_punizione_slides.html
+++ b/stories/it/0342_punizione_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
-<p>&quot;Rahim, presto te ne pentirai&quot; Avvertì la mamma.</p>
+<p>&quot;Rahim, presto te ne pentirai,&quot; avvertì la mamma.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
-<p>&quot;Mi fa malissimo la pancia&quot; Bisbigliò Rahim.</p>
+<p>&quot;Mi fa malissimo la pancia,&quot; bisbigliò Rahim.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
-<p>Più tardi, Rahim chiese scusa a tutti noi. &quot;Non sarò più così ingordo&quot; Promise. E noi tutti gli credemmo.</p>
+<p>Più tardi, Rahim chiese scusa a tutti noi. &quot;Non sarò più così ingordo,&quot; promise. E noi tutti gli credemmo.</p>
 <center>
 <strong>12</strong>
 </center>
