--- a/stories/pl/0052_simbegwire_slides.html
+++ b/stories/pl/0052_simbegwire_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>La vendetta dell'uccello del miele - Global African Storybook</title>
+  <title>Simbegwire - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="la-vendetta-delluccello-del-miele" class="slide level1">
-<h1>La vendetta dell'uccello del miele</h1>
+<section id="simbegwire" class="slide level1">
+<h1>Simbegwire</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
-<p>Questa è la storia di Ngede, l'uccello del miele, e di un avido giovane uomo chiamato Gingile. Un giorno, mentre Gingile era fuori a caccia, sentì il verso i Ngede. A Gingile venne l'acquolina solo al pensiero del miele. Si fermò e ascoltò attentamente, cercando finché non vide l'uccellino tra i rami, proprio sopra la sua testa. &quot;Chip-Chip-Chip&quot; cinguettò il piccolo uccellino mentre volava sull'altro albero. &quot;Chip-Chip-Chip&quot; richiamò, fermandosi di tanto in tanto per assicurarsi che Gingile lo seguisse.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
+<p>Simbegwire była bardzo smutna, kiedy zmarła jej matka. Ojciec Simbegwire starał się jak najlepiej zajmować córką. Powoli uczyli się na nowo żyć szczęśliwie, sami. Każdego ranka siadali razem i planowali kolejny dzień. Kazdego wieczoru, przygotowywali wspólnie obiad, po czym zmywali naczynia. Ojciec Simbegwire pomagał jej również z zadaniami domowymi.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
-<p>Dopo mezz'ora, raggiunsero un grosso albero di fichi selvatici. Ngede saltò sui rami follemente. Poi, si appollaiò su uno dei rami e sollevò la testa verso Gingile come per dire &quot;Eccolo qui! Vieni! Perché ci metti tanto?&quot; Gingile non riusciva a vedere nemmeno un' ape da sotto l'albero, ma si fidò di Ngede.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
+<p>Pewnego dnia ojciec Simbegwire wrócił do domu później niż zwykle. &quot;Gdzie jesteś dziecinko?&quot; zawołał. Simbegwire podbiegła do taty, po czym zatrzymała się gdy zobaczyła, że on trzyma dłoń obcej kobiety. „Chciałbym abyś poznała kogoś wyjątkowego, moje dziecko. To jest Anita,&quot; powiedział, usmiechając się.</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/04.jpg" /></p>
-<p>Così, Gingile appoggiò la sua lancia sotto l'albero, raccolse un po' di rami secchi e fece un piccolo fuoco. Quando il fuoco iniziò a bruciare bene, mise un lungo ramo secco nel centro. Quel tipo di legno era ben noto per la quantità di fumo che produceva al bruciare. Gingile cominciò a scalare con il legnetto fumante fra i denti.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
+<p>„Witaj Simbegwire, Twoj tato wiele mi o Tobie opowiadał,&quot; powiedziała Anita. Lecz nie uśmiechnęła się, ani nie podała dziewczynce ręki. Ojciec Simbegwire był bardzo szczęśliwy i podekscytowany. Opowiadał jak wspaniale by było gdyby zamieszkali we trójkę i jak cudownie by im sie wspólnie żyło. „Moje dziecko, mam nadzieję że zaakceptujesz Anitę, jako swoją matkę&quot;, odrzekł.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/05.jpg" /></p>
-<p>Presto riuscì a sentire il forte ronzare delle api lavoratrici. Uscivano ed entravano nella cavità dell'albero. Quando Gingile raggiunse l'alveare, vi spinse il legnetto fumante dentro. Le api si affrettarono ad uscire, arrabbiatissime! Volarono via perché a loro non piaceva il fumo – ma non prima di aver punto Gingile malamente!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
+<p>Życie Simbegwire zupełnie się odmieniło. Dziewczynka już nie miała czasu na poranne rozmowy z ojcem. Anita zlecała jej tak wiele robót w domu, ze Simbegwire nie miała sił wypełniać prac domowych zadanych ze szkoły. Chodziła spać, zaraz po kolacji. Jej jedynym ukojeniem był kolorowy kocyk, który dostała od matki. Ojciec Simbegwire zdawał się nie widzieć, że dziewczynka jest nieszczęśliwa.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
-<p>Quando le api se ne andarono, Gingile mise le mani nel nido. Le tirò fuori piene di pesante favo, gocciolante di dolcissimo miele e piene di grosse e bianche larve. Con cautela, mise il favo nella sacca che portava sulle spalle e cominciò a scendere dall'albero.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
+<p>Kilka miesięcy później, ojciec Simbegwire poinformował ją i Anitę, że musi wyjechać na jakiś czas. „Wiem, że będziecie się sobą nawzajem opiekować.&quot; Na twarzy Simbegwire pojawiło się wielkie rozczarowanie gdy usłyszała ojca plany, lecz on nic nie zauważył. Anita nic nie powiedziała, lecz również nie była szczęśliwa z tego powodu.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/07.jpg" /></p>
-<p>Ngede guardò avidamente tutto quello che Gingile faceva. Aspettava che gli lasciasse un grosso pezzo di alveare come ringraziamento all'uccello del miele. Ngede volò di ramo in ramo, sempre più vicino al suolo. Finalmente Gingile raggiunse il fondo dell'albero. Ngede si posò su una roccia vicino al ragazzo e aspettò la sua ricompensa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
+<p>Życie Simbegwire stało się jeszcze cięższe. Jeśli dziewczynka nie ukończyła wszystkich robót wokół domu, badź narzekała, Anita biła ją. Pewnego wieczoru kobieta zjadła prawie całą kolację sama, zostawiając dziewczynce tylko resztki. Każdej nocy Simbegwire zasypiała z płaczem, tuląc sie do kocyka od mamy.</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
-<p>Invece, Gingile spense il fuoco, prese la sua lancia e cominciò a incamminarsi verso casa, ignorando l'uccellino. Ngede cinguettò arrabbiato &quot;VIC-torr! VIC-torr!&quot; Gingile si fermò, fissò il piccolo uccellino e scoppiò in una sonora risata. &quot;Vuoi del miele amico mio? Ha! Ma ho fatto io tutto il lavoro, io mi sono beccato tutte le punture! Perché dovrei condividere anche solo un po' di questo delizioso miele con te?&quot; E se ne andò. Ngede era furioso! Non era questo il modo di trattarlo! Decise che si sarebbe vendicato.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
+<p>Pewnego ranka, dziewczynka nieco zaspała. „Ty leniwa smarkulo!&quot; krzyczała Anita, wyciagając ją z łóżka. Pamiątkowy i jakże drogocenny dla Simbegwire kocyk zaczepił się na gwoździu i rozdarł na pół.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
-<p>Un giorno, qualche settimana dopo, Gingile sentì di nuovo la chiamata del miele di Ngede. Ricordò il delizioso miele e avidamente seguì l'uccellino ancora una volta. Dopo aver guidato Gingile al confine della foresta, Ngede si fermò a riposare in un maestoso albero. &quot;Ah,&quot; pensò Gingile. &quot;l'alveare deve essere su questo albero.&quot; Rapidamente fece un piccolo fuoco e cominciò ad arrampicarsi con il legnetto fumante fra i denti. Ngede si sedette e guardò.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
+<p>Simbegwire była bardzo rozgoryczona. Zdecydowała, że ucieknie z domu. Spakowała kawałki kocyka, jedzenie i opuściła dom. Podążała drogą, którą odjechał ojciec.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,8 +168,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
-<p>Gingile si arrampicò, chiedendosi perché non sentisse il solito ronzare. &quot;Forse il nido è nelle profondità dell'albero.&quot; Si arrampicò un ramo più in sù. Ma invece di un nido, si ritrovò a fissare le fauci di un leopardo! Leopardo era veramente arrabbiato, qualcuno aveva interrotto maleducatamente il suo sonnellino. Strinse gli occhi e aprì la sua bocca per mostrare i grossi aguzzi denti.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
+<p>Kiedy nadszedł wieczór, wspięła się na wysokie drzewo, niedalego strumyczka i przygotowała sobie łóżko na gałęzi. Kiedy zasypiała, nuciła sobie „Mamo, mamo, mamo, zostawiłaś mnie. Opuściłaś i nigdy już nie wróciłaś. Ojciec już mnie nie kocha. Matko, kiedy wrócisz do mnie? Zostawiłaś mnie.&quot;</p>
 <center>
 <strong>9</strong>
 </center>
@@ -177,8 +177,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
-<p>Prima che Leopardo potesse azzannare Gingile, quest'ultimo si affrettò a scendere dall'albero. Nella fretta, mancò un ramo e atterrò con un tonfo pesante, slogandosi la caviglia. Zoppicò via più veloce che poté! Fortunatamente per lui, Leopardo era ancora troppo assonnato per inseguirlo. Ngede, l'uccello del miele, ebbe la sua vendetta.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
+<p>Następnego ranka, Simbegwire znów nuciła swoją piosenkę. Kobiety, które właśnie przyszły uprać swoje ubrania nad strumyczkiem, usłyszały smutną piosenkę dobiegającą z wysokiego drzewa. Pomyślały, że to tylko liście szeleszczą, na wietrze i dalej pracowały, lecz jedna z kobiet ostrożnie przysłuchiwała się pieśni.</p>
 <center>
 <strong>10</strong>
 </center>
@@ -186,8 +186,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
-<p>Così, quando i bambini di Gingile ascoltano la storia di Ngede, portano rispetto al piccolo uccellino. Ogni volta che raccolgono il miele, si assicurano di lasciare la parte più grossa del favo all'uccello del miele!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
+<p>Gdy ta kobieta spojrzała w górę, na drzewo - ujrzała dziewczynkę i jej potargany kocyk. „Simbegwire, córeczko mojego brata!&quot; zapłakała. Druga kobieta przestała prać i pomogła Simbegwire zejść z drzewa. Ciotka utuliła dziewczynkę i próbowała ją uspokoić.</p>
 <center>
 <strong>11</strong>
 </center>
@@ -195,12 +195,57 @@
 </section>
 <section class="slide level1">
 
-<h2 id="la-vendetta-delluccello-del-miele-1">La vendetta dell'uccello del miele</h2>
-<strong>Text:</strong> Zulu folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
+<p>Zabrała dziewczynkę do swojego domu, gdzie ją nakarmiła i ułożyła do łóżka z kocykiem matki. Tej nocy Simbegwire płakała przed zaśnięciem, ale były to łzy ukojenia. Wiedziała, ze ciotka dobrze się nią zaopiekuje.</p>
+<center>
+<strong>12</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
+<p>Kiedy ojciec wrócił do domu, zastał pokój dziewczynki pusty. „Co się stało Anito?&quot; zapytał z ciężkim sercem. Kobieta wytłumaczyła mu, ze córka uciekła. „Chciałam aby mnie szanowała&quot;, odpowiedziała, „ale możliwe, że byłam zbyt surowa.&quot; Ojciec Simbegwire wyszedł z domu i udał się w kierunku strumyczka. Potem poszedł w kierunku wioski, gdzie mieszkała jego siostra, by dowiedzieć się czy może ona widziała Simbegwire.</p>
+<center>
+<strong>13</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
+<p>Simbegwire bawiła się z kuzynem, gdy z daleka zauważyła tatę. Przestraszyła się, że może ojciec jest na nią zły i ukryła się w domu. Lecz ojciec rzekł: „Simbegwire, nie znalazłem Ci idealnej matki. Takiej, która by Cię kochała i rozumiała. Ja natomiast jestem z Ciebie bardzo dumny i kocham Cię.&quot; Ustalili, że Simbegwire zostanie z ciotką tak długo jak tylko zechce.</p>
+<center>
+<strong>14</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
+<p>Ojciec odwiedział ją codziennie, aż kiedyś przyszedł z Anitą. Kobieta wyciągnęła dłoń w stronę dziewczynki i powiedziała: „Jest mi tak przykro dziecinko, myliłam się,&quot; płakała. „Czy dasz mi jeszcze jedną szanse?&quot; Simbegwire spojrzała na zatroskaną twarz ojca, po czym powoli podeszła do Anity i przytuliła sie do niej.</p>
+<center>
+<strong>15</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
+<p>Kolejnego tygodnia, Anita zaprosiła Simbegwire wraz z ciotką i kuzynami do domu na obiad. Co to była za uczta! Anita przygotowała ulubione potrawy dziewczynki, i każdy jadł do syta. Potem dzieci poszły sie bawić, a dorośli rozmawiali. Simbegwire była szczęśliwa. Zdecydawała, że już wkrótce wróci do domu rodzinnego, by zamieszkać z ojcem i macochą.</p>
+<center>
+<strong>16</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="simbegwire-1">Simbegwire</h2>
+<strong>Text:</strong> Rukia Nantale<br> <strong>Illustrations:</strong> Benjamin Mitchley<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/simbegwire'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
