--- a/stories/pl/0234_andiswa-gwiazda-piłki-nożnej.html
+++ b/stories/pl/0234_andiswa-gwiazda-piłki-nożnej.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Andiswa - Gwiazda Piłki Nożnej</title>
+    <title>Andiswa – Gwiazda Piłki Nożnej</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 
-<h1 id="andiswa---gwiazda-piki-nonej">Andiswa - Gwiazda Piłki Nożnej</h1>
+<h1 id="andiswa--gwiazda-piki-nonej">Andiswa – Gwiazda Piłki Nożnej</h1>
 
 Eden Daniels<br>Polski</div><div class="pagebreak">
 
