--- a/stories/pl/0234_andiswa-gwiazda-piłki-nożnej_slides.html
+++ b/stories/pl/0234_andiswa-gwiazda-piłki-nożnej_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Andiswa - Gwiazda Piłki Nożnej - Global African Storybook</title>
+  <title>Andiswa – Gwiazda Piłki Nożnej - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="andiswa---gwiazda-piłki-nożnej" class="slide level1">
-<h1>Andiswa - Gwiazda Piłki Nożnej</h1>
+<section id="andiswa-gwiazda-piłki-nożnej" class="slide level1">
+<h1>Andiswa – Gwiazda Piłki Nożnej</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/01.jpg" />
 </center>
@@ -168,7 +168,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="andiswa---gwiazda-piłki-nożnej-1">Andiswa - Gwiazda Piłki Nożnej</h2>
+<h2 id="andiswa-gwiazda-piłki-nożnej-1">Andiswa – Gwiazda Piłki Nożnej</h2>
 <strong>Text:</strong> Eden Daniels<br> <strong>Illustrations:</strong> Eden Daniels<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
