--- a/stories/pl/0296_tom-sprzedawca-bananów.html
+++ b/stories/pl/0296_tom-sprzedawca-bananów.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Tom - sprzedawca bananów</title>
+    <title>Tom – sprzedawca bananów</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,7 +43,7 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/01.jpg" />
 
-<h1 id="tom---sprzedawca-bananw">Tom - sprzedawca bananów</h1>
+<h1 id="tom--sprzedawca-bananw">Tom – sprzedawca bananów</h1>
 
 Humphreys Odunga<br>Polski</div><div class="pagebreak">
 
@@ -70,7 +70,7 @@ Humphreys Odunga<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
 
-<p>Ale nikt nie kupuje bananów Tom’a. Ludzie wolą kupować od kobiet.</p>
+<p>Ale nikt nie kupuje bananów Toma. Ludzie wolą kupować od kobiet.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -105,7 +105,7 @@ Humphreys Odunga<br>Polski</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
 
-<p>Więcej osób zaczyna kupować banany Tom’a.</p>
+<p>Więcej osób zaczyna kupować banany Toma.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
