--- a/stories/pl/0296_tom-sprzedawca-bananów_slides.html
+++ b/stories/pl/0296_tom-sprzedawca-bananów_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>Tom - sprzedawca bananów - Global African Storybook</title>
+  <title>Tom – sprzedawca bananów - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,8 +87,8 @@
 </head>
 <body>
 
-<section id="tom---sprzedawca-bananów" class="slide level1">
-<h1>Tom - sprzedawca bananów</h1>
+<section id="tom-sprzedawca-bananów" class="slide level1">
+<h1>Tom – sprzedawca bananów</h1>
 <center>
 <img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/01.jpg" />
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
-<p>Ale nikt nie kupuje bananów Tom'a. Ludzie wolą kupować od kobiet.</p>
+<p>Ale nikt nie kupuje bananów Toma. Ludzie wolą kupować od kobiet.</p>
 <center>
 <strong>4</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
-<p>Więcej osób zaczyna kupować banany Tom'a.</p>
+<p>Więcej osób zaczyna kupować banany Toma.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -204,7 +204,7 @@
 </section>
 <section class="slide level1">
 
-<h2 id="tom---sprzedawca-bananów-1">Tom - sprzedawca bananów</h2>
+<h2 id="tom-sprzedawca-bananów-1">Tom – sprzedawca bananów</h2>
 <strong>Text:</strong> Humphreys Odunga<br> <strong>Illustrations:</strong> Zablon Alex Nguku<br> <strong>Translation:</strong> Aleksandra Migorska<br> <strong>Language:</strong> Polish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
