--- a/stories/pl/0327_liczymy-zwierzęta.html
+++ b/stories/pl/0327_liczymy-zwierzęta.html
@@ -63,7 +63,7 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>Polski</div><div class="page
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
 
-<p>Trzy bawoły i cztery ptaki rownież zamierzają pić wodę.</p>
+<p>Trzy bawoły i cztery ptaki również zamierzają pić wodę.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
