--- a/stories/hi/0006_अनान्सी-और-ज्ञान_slides.html
+++ b/stories/hi/0006_अनान्सी-और-ज्ञान_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>La vendetta dell'uccello del miele - Global African Storybook</title>
+  <title>अनान्सी और ज्ञान - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="la-vendetta-delluccello-del-miele" class="slide level1">
-<h1>La vendetta dell'uccello del miele</h1>
+<section id="अननस-और-जञन" class="slide level1">
+<h1>अनान्सी और ज्ञान</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
-<p>Questa è la storia di Ngede, l'uccello del miele, e di un avido giovane uomo chiamato Gingile. Un giorno, mentre Gingile era fuori a caccia, sentì il verso i Ngede. A Gingile venne l'acquolina solo al pensiero del miele. Si fermò e ascoltò attentamente, cercando finché non vide l'uccellino tra i rami, proprio sopra la sua testa. &quot;Chip-Chip-Chip&quot; cinguettò il piccolo uccellino mentre volava sull'altro albero. &quot;Chip-Chip-Chip&quot; richiamò, fermandosi di tanto in tanto per assicurarsi che Gingile lo seguisse.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
+<p>बहुत पहले लोग कुछ नही जानते थे। उन्हे नही मालूम था कि फसल कैसे उगाते है, कपड़ा कैसे बुनते है, या लोहे के औजार कैसे बनाते है। भगवान न्यामे के पास आकाश में दुनिया का सारा ज्ञान था। उन्होने उसे एक मिट्टी के बरतन में सुरश्रित रखा था।</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
-<p>Dopo mezz'ora, raggiunsero un grosso albero di fichi selvatici. Ngede saltò sui rami follemente. Poi, si appollaiò su uno dei rami e sollevò la testa verso Gingile come per dire &quot;Eccolo qui! Vieni! Perché ci metti tanto?&quot; Gingile non riusciva a vedere nemmeno un' ape da sotto l'albero, ma si fidò di Ngede.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
+<p>एक दिन, न्यामे ने निर्णय लिया कि वो ज्ञान का बरतन अनान्सी को दे देंगे। हर बार अनान्सी बरतन में देखता वो कुछ नया सीखता। ये बहुत रोमांचक था।</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/04.jpg" /></p>
-<p>Così, Gingile appoggiò la sua lancia sotto l'albero, raccolse un po' di rami secchi e fece un piccolo fuoco. Quando il fuoco iniziò a bruciare bene, mise un lungo ramo secco nel centro. Quel tipo di legno era ben noto per la quantità di fumo che produceva al bruciare. Gingile cominciò a scalare con il legnetto fumante fra i denti.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
+<p>लालची अनान्सी ने सोचा, &quot;मैं बरतन को एक लम्बे पेड़ के ऊपर सुराश्रित रख दूंगा। उसने एक लम्बा धागा बुना, उसे बरतन के चारो ओर लपेट दिया और अपने पेट से बाँध दिया। उसने पेड़ पर चढ़ना शुरू किया। लेकिन पेड़ पर चढ़ना मुशकिल था क्योकी बरतन उसके घुटनो पर पूरे समय लगता रहा।</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/05.jpg" /></p>
-<p>Presto riuscì a sentire il forte ronzare delle api lavoratrici. Uscivano ed entravano nella cavità dell'albero. Quando Gingile raggiunse l'alveare, vi spinse il legnetto fumante dentro. Le api si affrettarono ad uscire, arrabbiatissime! Volarono via perché a loro non piaceva il fumo – ma non prima di aver punto Gingile malamente!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
+<p>सारे समय अनान्सी का छोटा बेटा पेड़ के तले से देखता रहा। उसने कहा, &quot;अगर आप बरतन को अपनी पीठ से बाँध लोगे तो चढ़ना आसान नही होगा?&quot; अनान्सी ने ज्ञान से बरे बरतन को अपनी पीठ से बाँध कर देखा तो वो वास्तव में बहुत आसान था।</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
-<p>Quando le api se ne andarono, Gingile mise le mani nel nido. Le tirò fuori piene di pesante favo, gocciolante di dolcissimo miele e piene di grosse e bianche larve. Con cautela, mise il favo nella sacca che portava sulle spalle e cominciò a scendere dall'albero.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
+<p>बहुत जल्दी वो पेड़ के ऊपर पहूँच गया। लेकिन फिर उसने रुककर सोचा, &quot;मेरे पास सारा ज्ञान तो मेरे पास है, और मेरा बेटा मुझसे ज़्यादा हौशियार है।&quot; अनान्सी इतना गुस्सा हुआ कि उसने मिट्टी का बरतन पेड़ से नीचे फेंक दिया।</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/07.jpg" /></p>
-<p>Ngede guardò avidamente tutto quello che Gingile faceva. Aspettava che gli lasciasse un grosso pezzo di alveare come ringraziamento all'uccello del miele. Ngede volò di ramo in ramo, sempre più vicino al suolo. Finalmente Gingile raggiunse il fondo dell'albero. Ngede si posò su una roccia vicino al ragazzo e aspettò la sua ricompensa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
+<p>वो ज़मीन पर टुटकर बिखर गया। ज्ञान सबमे बाँटने के लिये आजाद हो गया। और इस तरह से लोगों ने सीखा: फसल उगाना, कपड़रा बुनना, लोहे के औजार बनाना, और बाकी सारी चिजे जो लोग करना जानते है।</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,57 +150,12 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
-<p>Invece, Gingile spense il fuoco, prese la sua lancia e cominciò a incamminarsi verso casa, ignorando l'uccellino. Ngede cinguettò arrabbiato &quot;VIC-torr! VIC-torr!&quot; Gingile si fermò, fissò il piccolo uccellino e scoppiò in una sonora risata. &quot;Vuoi del miele amico mio? Ha! Ma ho fatto io tutto il lavoro, io mi sono beccato tutte le punture! Perché dovrei condividere anche solo un po' di questo delizioso miele con te?&quot; E se ne andò. Ngede era furioso! Non era questo il modo di trattarlo! Decise che si sarebbe vendicato.</p>
-<center>
-<strong>7</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
-<p>Un giorno, qualche settimana dopo, Gingile sentì di nuovo la chiamata del miele di Ngede. Ricordò il delizioso miele e avidamente seguì l'uccellino ancora una volta. Dopo aver guidato Gingile al confine della foresta, Ngede si fermò a riposare in un maestoso albero. &quot;Ah,&quot; pensò Gingile. &quot;l'alveare deve essere su questo albero.&quot; Rapidamente fece un piccolo fuoco e cominciò ad arrampicarsi con il legnetto fumante fra i denti. Ngede si sedette e guardò.</p>
-<center>
-<strong>8</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
-<p>Gingile si arrampicò, chiedendosi perché non sentisse il solito ronzare. &quot;Forse il nido è nelle profondità dell'albero.&quot; Si arrampicò un ramo più in sù. Ma invece di un nido, si ritrovò a fissare le fauci di un leopardo! Leopardo era veramente arrabbiato, qualcuno aveva interrotto maleducatamente il suo sonnellino. Strinse gli occhi e aprì la sua bocca per mostrare i grossi aguzzi denti.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
-<p>Prima che Leopardo potesse azzannare Gingile, quest'ultimo si affrettò a scendere dall'albero. Nella fretta, mancò un ramo e atterrò con un tonfo pesante, slogandosi la caviglia. Zoppicò via più veloce che poté! Fortunatamente per lui, Leopardo era ancora troppo assonnato per inseguirlo. Ngede, l'uccello del miele, ebbe la sua vendetta.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
-<p>Così, quando i bambini di Gingile ascoltano la storia di Ngede, portano rispetto al piccolo uccellino. Ogni volta che raccolgono il miele, si assicurano di lasciare la parte più grossa del favo all'uccello del miele!</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="la-vendetta-delluccello-del-miele-1">La vendetta dell'uccello del miele</h2>
-<strong>Text:</strong> Zulu folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
+<h2 id="अननस-और-जञन-1">अनान्सी और ज्ञान</h2>
+<strong>Text:</strong> Ghanaian folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Tanvi Sirari<br> <strong>Language:</strong> Hindi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/anansi-and-wisdom'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
