--- a/stories/hi/0009_मेरी-बिल्ली-कहा-है_slides.html
+++ b/stories/hi/0009_मेरी-बिल्ली-कहा-है_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>La vendetta dell'uccello del miele - Global African Storybook</title>
+  <title>मेरी बिल्ली कहा है? - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="la-vendetta-delluccello-del-miele" class="slide level1">
-<h1>La vendetta dell'uccello del miele</h1>
+<section id="मर-बलल-कह-ह" class="slide level1">
+<h1>मेरी बिल्ली कहा है?</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
-<p>Questa è la storia di Ngede, l'uccello del miele, e di un avido giovane uomo chiamato Gingile. Un giorno, mentre Gingile era fuori a caccia, sentì il verso i Ngede. A Gingile venne l'acquolina solo al pensiero del miele. Si fermò e ascoltò attentamente, cercando finché non vide l'uccellino tra i rami, proprio sopra la sua testa. &quot;Chip-Chip-Chip&quot; cinguettò il piccolo uccellino mentre volava sull'altro albero. &quot;Chip-Chip-Chip&quot; richiamò, fermandosi di tanto in tanto per assicurarsi che Gingile lo seguisse.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/02.jpg" /></p>
+<p>मेरी बिल्ली कहा है?</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
-<p>Dopo mezz'ora, raggiunsero un grosso albero di fichi selvatici. Ngede saltò sui rami follemente. Poi, si appollaiò su uno dei rami e sollevò la testa verso Gingile come per dire &quot;Eccolo qui! Vieni! Perché ci metti tanto?&quot; Gingile non riusciva a vedere nemmeno un' ape da sotto l'albero, ma si fidò di Ngede.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/03.jpg" /></p>
+<p>क्या वो बिस्तर के नीचे है?</p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +114,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/04.jpg" /></p>
-<p>Così, Gingile appoggiò la sua lancia sotto l'albero, raccolse un po' di rami secchi e fece un piccolo fuoco. Quando il fuoco iniziò a bruciare bene, mise un lungo ramo secco nel centro. Quel tipo di legno era ben noto per la quantità di fumo che produceva al bruciare. Gingile cominciò a scalare con il legnetto fumante fra i denti.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/04.jpg" /></p>
+<p>क्या वो इलमारी के ऊपर है?</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +123,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/05.jpg" /></p>
-<p>Presto riuscì a sentire il forte ronzare delle api lavoratrici. Uscivano ed entravano nella cavità dell'albero. Quando Gingile raggiunse l'alveare, vi spinse il legnetto fumante dentro. Le api si affrettarono ad uscire, arrabbiatissime! Volarono via perché a loro non piaceva il fumo – ma non prima di aver punto Gingile malamente!</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/05.jpg" /></p>
+<p>क्या वो सोफे के पिछे है?</p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +132,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
-<p>Quando le api se ne andarono, Gingile mise le mani nel nido. Le tirò fuori piene di pesante favo, gocciolante di dolcissimo miele e piene di grosse e bianche larve. Con cautela, mise il favo nella sacca che portava sulle spalle e cominciò a scendere dall'albero.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/06.jpg" /></p>
+<p>क्या वो कुड़ेदान के पास है?</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +141,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/07.jpg" /></p>
-<p>Ngede guardò avidamente tutto quello che Gingile faceva. Aspettava che gli lasciasse un grosso pezzo di alveare come ringraziamento all'uccello del miele. Ngede volò di ramo in ramo, sempre più vicino al suolo. Finalmente Gingile raggiunse il fondo dell'albero. Ngede si posò su una roccia vicino al ragazzo e aspettò la sua ricompensa.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/07.jpg" /></p>
+<p>क्या वो टोकरी के अन्दर है?</p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +150,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
-<p>Invece, Gingile spense il fuoco, prese la sua lancia e cominciò a incamminarsi verso casa, ignorando l'uccellino. Ngede cinguettò arrabbiato &quot;VIC-torr! VIC-torr!&quot; Gingile si fermò, fissò il piccolo uccellino e scoppiò in una sonora risata. &quot;Vuoi del miele amico mio? Ha! Ma ho fatto io tutto il lavoro, io mi sono beccato tutte le punture! Perché dovrei condividere anche solo un po' di questo delizioso miele con te?&quot; E se ne andò. Ngede era furioso! Non era questo il modo di trattarlo! Decise che si sarebbe vendicato.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/08.jpg" /></p>
+<p>क्या वो घर के बाहर है?</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +159,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
-<p>Un giorno, qualche settimana dopo, Gingile sentì di nuovo la chiamata del miele di Ngede. Ricordò il delizioso miele e avidamente seguì l'uccellino ancora una volta. Dopo aver guidato Gingile al confine della foresta, Ngede si fermò a riposare in un maestoso albero. &quot;Ah,&quot; pensò Gingile. &quot;l'alveare deve essere su questo albero.&quot; Rapidamente fece un piccolo fuoco e cominciò ad arrampicarsi con il legnetto fumante fra i denti. Ngede si sedette e guardò.</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0009/09.jpg" /></p>
+<p>वो यहा है!</p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,45 +168,18 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
-<p>Gingile si arrampicò, chiedendosi perché non sentisse il solito ronzare. &quot;Forse il nido è nelle profondità dell'albero.&quot; Si arrampicò un ramo più in sù. Ma invece di un nido, si ritrovò a fissare le fauci di un leopardo! Leopardo era veramente arrabbiato, qualcuno aveva interrotto maleducatamente il suo sonnellino. Strinse gli occhi e aprì la sua bocca per mostrare i grossi aguzzi denti.</p>
-<center>
-<strong>9</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
-<p>Prima che Leopardo potesse azzannare Gingile, quest'ultimo si affrettò a scendere dall'albero. Nella fretta, mancò un ramo e atterrò con un tonfo pesante, slogandosi la caviglia. Zoppicò via più veloce che poté! Fortunatamente per lui, Leopardo era ancora troppo assonnato per inseguirlo. Ngede, l'uccello del miele, ebbe la sua vendetta.</p>
-<center>
-<strong>10</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
-<p>Così, quando i bambini di Gingile ascoltano la storia di Ngede, portano rispetto al piccolo uccellino. Ogni volta che raccolgono il miele, si assicurano di lasciare la parte più grossa del favo all'uccello del miele!</p>
-<center>
-<strong>11</strong>
-</center>
-
-</section>
-<section class="slide level1">
-
-<h2 id="la-vendetta-delluccello-del-miele-1">La vendetta dell'uccello del miele</h2>
-<strong>Text:</strong> Zulu folktale<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Laura Pighini<br> <strong>Language:</strong> Italian<br>
+<h2 id="मर-बलल-कह-ह-1">मेरी बिल्ली कहा है?</h2>
+<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Bronwen Heath<br> <strong>Translation:</strong> Tanvi Sirari<br> <strong>Language:</strong> Hindi<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/honeyguide%E2%80%99s-revenge'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/where-my-cat'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
 
 <p><center><div class="license">
-<a rel="license" href="http://creativecommons.org/licenses/by/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/3.0/">Creative Commons Attribution 3.0 Unported License</a>.
+<a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nc/3.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/3.0/">Creative Commons Attribution-NonCommercial 3.0 Unported License</a>.
 </div></center>
 
 
