--- a/stories/it/0052_simbegwire.html
+++ b/stories/it/0052_simbegwire.html
@@ -56,14 +56,14 @@ Rukia Nantale<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
 
-<p>Un giorno, il papà di Simbegwire tornò a casa più tardi del solito. “Dove sei bambina mia?” La chiamò. Simbegwire corse dal padre. Si fermò immobile quando vide che teneva per mano una donna. “Voglio presentarti qualcuno di speciale, bambina mia. Questa è Anita” Disse sorridendo.</p>
+<p>Un giorno, il papà di Simbegwire tornò a casa più tardi del solito. “Dove sei bambina mia?” La chiamò. Simbegwire corse dal padre. Si fermò immobile quando vide che teneva per mano una donna. “Voglio presentarti qualcuno di speciale, bambina mia. Questa è Anita,” disse sorridendo.</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
 
-<p>“Ciao Simbegwire, tuo padre mi ha parlato molto di te” Disse Anita, ma non sorrise o prese la mano della bambina. Il papà di Simbegwire era emozionato e felice. Parlò di andare a vivere loro tre insieme e di come sarebbe bella la loro vita. “Bambina mia, spero accetterai Anita come la tua nuova madre” Disse.</p>
+<p>“Ciao Simbegwire, tuo padre mi ha parlato molto di te,” disse Anita, ma non sorrise o prese la mano della bambina. Il papà di Simbegwire era emozionato e felice. Parlò di andare a vivere loro tre insieme e di come sarebbe bella la loro vita. “Bambina mia, spero accetterai Anita come la tua nuova madre,” disse.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -77,7 +77,7 @@ Rukia Nantale<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
 
-<p>Dopo alcuni mesi, il papà di Simbegwire disse loro che sarebbe stato via di casa per un po’. “Devo viaggiare per lavoro” Disse:” Ma so che vi prenderete cura l’una dell’altra.” Simbegwire aveva un’ espressione triste ma suo padre non la notò. Anita non disse nulla, non era felice nemmeno lei.</p>
+<p>Dopo alcuni mesi, il papà di Simbegwire disse loro che sarebbe stato via di casa per un po’. “Devo viaggiare per lavoro,” disse: “Ma so che vi prenderete cura l’una dell’altra.” Simbegwire aveva un’ espressione triste ma suo padre non la notò. Anita non disse nulla, non era felice nemmeno lei.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -133,21 +133,21 @@ Rukia Nantale<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
 
-<p>Quando il padre di Simbegwire tornò a casa, trovo la sua cameretta vuota. “Cosa è successo Anita?” Chiese con il cuore pesante. La donna spiegò che Simbegwire era scappata via. “ Volevo che mi rispettasse”  Disse. “Ma forse sono stata troppo severa.” Il papà di Simbegwire lasciò casa e andò in direzione del ruscello. Raggiunse il villaggio della sorella e scoprì che lei aveva visto Simbegwire.</p>
+<p>Quando il padre di Simbegwire tornò a casa, trovo la sua cameretta vuota. “Cosa è successo Anita?” Chiese con il cuore pesante. La donna spiegò che Simbegwire era scappata via. “Volevo che mi rispettasse,” disse. “Ma forse sono stata troppo severa.” Il papà di Simbegwire lasciò casa e andò in direzione del ruscello. Raggiunse il villaggio della sorella e scoprì che lei aveva visto Simbegwire.</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
 
-<p>Simbegwire stava giocando con i suoi cuginetti quando vide suo padre da lontano. Aveva paura che fosse arrabbiato, quindi corse in casa per nascondersi. Ma il padre andò da lei e le disse “Simbegwire, tu hai trovato la madre perfetta per te. Una che ti ama e ti capisce. Sono fiero di  te e ti voglio bene.” Concordarono che Simbegwire sarebbe rimasta con sua zia per quanto avrebbe voluto.</p>
+<p>Simbegwire stava giocando con i suoi cuginetti quando vide suo padre da lontano. Aveva paura che fosse arrabbiato, quindi corse in casa per nascondersi. Ma il padre andò da lei e le disse “Simbegwire, tu hai trovato la madre perfetta per te. Una che ti ama e ti capisce. Sono fiero di te e ti voglio bene.” Concordarono che Simbegwire sarebbe rimasta con sua zia per quanto avrebbe voluto.</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
 
-<p>Suo padre la visitò ogni giorno. Una volta venne con Anita. Lei prese la mano di Simbegwire. “Ti chiedo scusa piccolina, mi sbagliavo.” Pianse “Mi daresti un’altra possibilità?” Simbegwire guardò suo padre e la sua faccia preoccupata. Poi, lentamente, fece un passo verso Anita e la abbracciò.</p>
+<p>Suo padre la visitò ogni giorno. Una volta venne con Anita. Lei prese la mano di Simbegwire. “Ti chiedo scusa piccolina, mi sbagliavo,” pianse. “Mi daresti un’altra possibilità?” Simbegwire guardò suo padre e la sua faccia preoccupata. Poi, lentamente, fece un passo verso Anita e la abbracciò.</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
