--- a/stories/it/0066_nozibele-e-i-tre-capelli_slides.html
+++ b/stories/it/0066_nozibele-e-i-tre-capelli_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p>Poi il cane disse: &quot;Cucina per me!&quot; &quot;Ma io non ho mai cucinato per un cane prima d'ora&quot; Rispose lei. &quot;Cucina o ti mordo!&quot; Disse il cane. Così Nozibele cucinò un po' di cibo per il cane.</p>
+<p>Poi il cane disse: &quot;Cucina per me!&quot; &quot;Ma io non ho mai cucinato per un cane prima d'ora,&quot; rispose lei. &quot;Cucina o ti mordo!&quot; Disse il cane. Così Nozibele cucinò un po' di cibo per il cane.</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>Poi il cane disse &quot;Fammi il letto!&quot; Nozibele rispose: &quot;Non ho mai fatto un letto per un cane prima d'ora.&quot; &quot;Fammi il letto o ti mordo!&quot; Disse il cane. Così Nozibele gli fece il letto.</p>
+<p>Poi il cane disse: &quot;Fammi il letto!&quot; Nozibele rispose: &quot;Non ho mai fatto un letto per un cane prima d'ora.&quot; &quot;Fammi il letto o ti mordo!&quot; Disse il cane. Così Nozibele gli fece il letto.</p>
 <center>
 <strong>9</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>Quando il cane tornò, cercò Nozibele. &quot;Nozibele, dove sei?&quot; gridò &quot;Sono qui, sotto il letto.&quot; Disse il primo capello &quot;Sono qui, dietro la porta.&quot; Disse il secondo capello &quot;Sono qui, nel recinto&quot; Disse il terzo capello.</p>
+<p>Quando il cane tornò, cercò Nozibele. &quot;Nozibele, dove sei?&quot; gridò &quot;Sono qui, sotto il letto.&quot; Disse il primo capello &quot;Sono qui, dietro la porta.&quot; Disse il secondo capello &quot;Sono qui, nel recinto,&quot; disse il terzo capello.</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
-<p>Il cane capì che Nozibele l'aveva fregato. Così corse al villaggio. Ma I fratelli di Nozibele lo stavano aspettando con dei grandi bastoni. Il cane scappò e non lo rividero mai più.</p>
+<p>Il cane capì che Nozibele l'aveva fregato. Così corse al villaggio. Ma i fratelli di Nozibele lo stavano aspettando con dei grandi bastoni. Il cane scappò e non lo rividero mai più.</p>
 <center>
 <strong>13</strong>
 </center>
