--- a/stories/it/0111_perché-gli-ippopotami-non-hanno-il-pelo.html
+++ b/stories/it/0111_perché-gli-ippopotami-non-hanno-il-pelo.html
@@ -77,14 +77,14 @@ Basilio Gimo, David Ker<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p>Coniglio andò a cercare Fuoco e disse “ Vai a bruciare Ippopotamo quando esce dall’acqua per mangiare l’erba. Mi ha schiacciato il piede!” Fuoco rispose: “Non c’è problema Coniglio, mio amico. Farò quello che mi hai chiesto.”</p>
+<p>Coniglio andò a cercare Fuoco e disse “Vai a bruciare Ippopotamo quando esce dall’acqua per mangiare l’erba. Mi ha schiacciato il piede!” Fuoco rispose: “Non c’è problema Coniglio, mio amico. Farò quello che mi hai chiesto.”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
 
-<p>Più tardi, Ippopotamo stava mangiando l’erba lontano dal fiume quando.. “Whoosh!” Fuoco esplose in mille fiamme. Le fiamme incominciarono a bruciare il pelo di Ippopotamo.</p>
+<p>Più tardi, Ippopotamo stava mangiando l’erba lontano dal fiume quando: “Whoosh!” Fuoco esplose in mille fiamme. Le fiamme incominciarono a bruciare il pelo di Ippopotamo.</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
