--- a/stories/it/0201_bimbo-asino.html
+++ b/stories/it/0201_bimbo-asino.html
@@ -63,7 +63,7 @@ Lindiwe Matshikiza<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
 
-<p>Timida ma coraggiosa, la bimba si avvicinò alla donna. “Dobbiamo tenerla con noi” Decise la gente della piccola bimba. “Terremo lei e il suo bimbo al sicuro.”</p>
+<p>Timida ma coraggiosa, la bimba si avvicinò alla donna. “Dobbiamo tenerla con noi,” decise la gente della piccola bimba. “Terremo lei e il suo bimbo al sicuro.”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
