--- a/stories/it/0201_bimbo-asino_slides.html
+++ b/stories/it/0201_bimbo-asino_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
-<p>Timida ma coraggiosa, la bimba si avvicinò alla donna. &quot;Dobbiamo tenerla con noi&quot; Decise la gente della piccola bimba. &quot;Terremo lei e il suo bimbo al sicuro.&quot;</p>
+<p>Timida ma coraggiosa, la bimba si avvicinò alla donna. &quot;Dobbiamo tenerla con noi,&quot; decise la gente della piccola bimba. &quot;Terremo lei e il suo bimbo al sicuro.&quot;</p>
 <center>
 <strong>3</strong>
 </center>
