--- a/stories/it/0262_magozwe.html
+++ b/stories/it/0262_magozwe.html
@@ -49,7 +49,7 @@ Lesley Koyi<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/02.jpg" /></p>
 
-<p>Nella affollata città di Nairobi, lontano da un’amorevole vita in casa, viveva un gruppo di ragazzi senza tetto. Vivevano alla giornata. Ogni mattina, impacchettavano i loro materassi  dopo aver dormito sui freddi pavimenti. Per scaldarsi un po’, accendevano fuochi nei bidoni nella spazzatura. In questo gruppo di ragazzi c’era anche Magozwe. Lui era il più giovane.</p>
+<p>Nella affollata città di Nairobi, lontano da un’amorevole vita in casa, viveva un gruppo di ragazzi senza tetto. Vivevano alla giornata. Ogni mattina, impacchettavano i loro materassi dopo aver dormito sui freddi pavimenti. Per scaldarsi un po’, accendevano fuochi nei bidoni nella spazzatura. In questo gruppo di ragazzi c’era anche Magozwe. Lui era il più giovane.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -71,7 +71,7 @@ Dopo tre anni di trattamenti di questo genere, Magozwe scappò dallo zio e inizi
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/05.jpg" /></p>
 
-<p>La vita da strada era difficile e la maggior parte dei ragazzi faticava ogni giorno anche a trovare solo del cibo. A volte venivano  arrestati, altre venivano picchiati. Quando si ammalavano, non avevano nessuno ad aiutarli. Il gruppo dipendeva dai pochi soldi che ottenevano mendicando e vendendo oggetti di plastica e altri riciclati. La loro vita veniva resa ancora più difficile dalle lotte con i gruppi rivali che volevano il controllo di parti delle città.</p>
+<p>La vita da strada era difficile e la maggior parte dei ragazzi faticava ogni giorno anche a trovare solo del cibo. A volte venivano arrestati, altre venivano picchiati. Quando si ammalavano, non avevano nessuno ad aiutarli. Il gruppo dipendeva dai pochi soldi che ottenevano mendicando e vendendo oggetti di plastica e altri riciclati. La loro vita veniva resa ancora più difficile dalle lotte con i gruppi rivali che volevano il controllo di parti delle città.</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -106,7 +106,7 @@ Dopo tre anni di trattamenti di questo genere, Magozwe scappò dallo zio e inizi
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/10.jpg" /></p>
 
-<p>Magozwe era seduto sul pavimento a guardare il suo libro di figure, quando Thomas si sedette di fianco a lui. “Di che parla la storia?” Chiese. “Di un ragazzo che diventa un pilota” Rispose Magozwe. “Qual è il nome del ragazzo?” Chiese Thomas “Non lo so, non so leggere” Disse Magozwe sottovoce.</p>
+<p>Magozwe era seduto sul pavimento a guardare il suo libro di figure, quando Thomas si sedette di fianco a lui. “Di che parla la storia?” Chiese. “Di un ragazzo che diventa un pilota,” rispose Magozwe. “Qual è il nome del ragazzo?” Chiese Thomas “Non lo so, non so leggere,” disse Magozwe sottovoce.</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -127,7 +127,7 @@ Dopo tre anni di trattamenti di questo genere, Magozwe scappò dallo zio e inizi
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/13.jpg" /></p>
 
-<p>Magozwe pensò a questo posto nuovo e al fatto di andare a scuola. E se suo zio avesse ragione? Se lui fosse davvero troppo stupido per imparare qualcosa? E se lo avessero picchiato in questo nuovo posto? Era spaventato. “Forse è meglio che rimanga a vivere per strada” Pensò.</p>
+<p>Magozwe pensò a questo posto nuovo e al fatto di andare a scuola. E se suo zio avesse ragione? Se lui fosse davvero troppo stupido per imparare qualcosa? E se lo avessero picchiato in questo nuovo posto? Era spaventato. “Forse è meglio che rimanga a vivere per strada,” pensò.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
@@ -155,7 +155,7 @@ Dopo tre anni di trattamenti di questo genere, Magozwe scappò dallo zio e inizi
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0262/17.jpg" /></p>
 
-<p>Magozwe era seduto nel giardino della casa dal tetto verde, a leggere un libro di storie della scuola. Thomas lo raggiunse e si sedette di fianco a lui. “Di che parla la storia?” Chiese Thomas. “Di un ragazzo che diventa insegnante.” Rispose Magozwe. “Come si chiama il ragazzo?” Chiese Thomas. “Il suo nome è Magozwe.” disse Magozwe sorridendo.</p>
+<p>Magozwe era seduto nel giardino della casa dal tetto verde, a leggere un libro di storie della scuola. Thomas lo raggiunse e si sedette di fianco a lui. “Di che parla la storia?” Chiese Thomas. “Di un ragazzo che diventa insegnante,” rispose Magozwe. “Come si chiama il ragazzo?” Chiese Thomas. “Il suo nome è Magozwe,” disse Magozwe sorridendo.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
