--- a/stories/it/0342_punizione.html
+++ b/stories/it/0342_punizione.html
@@ -98,7 +98,7 @@ Adelheid Marie Bwire<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
 
-<p>“Rahim, presto te ne pentirai” Avvertì la mamma.</p>
+<p>“Rahim, presto te ne pentirai,” avvertì la mamma.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
@@ -112,7 +112,7 @@ Adelheid Marie Bwire<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
 
-<p>“Mi fa malissimo la pancia” Bisbigliò Rahim.</p>
+<p>“Mi fa malissimo la pancia,” bisbigliò Rahim.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
@@ -126,7 +126,7 @@ Adelheid Marie Bwire<br>Italiano</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
 
-<p>Più tardi, Rahim chiese scusa a tutti noi. “Non sarò più così ingordo” Promise. E noi tutti gli credemmo.</p>
+<p>Più tardi, Rahim chiese scusa a tutti noi. “Non sarò più così ingordo,” promise. E noi tutti gli credemmo.</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
