--- a/stories/pl/0327_liczymy-zwierzęta_slides.html
+++ b/stories/pl/0327_liczymy-zwierzęta_slides.html
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
-<p>Trzy bawoły i cztery ptaki rownież zamierzają pić wodę.</p>
+<p>Trzy bawoły i cztery ptaki również zamierzają pić wodę.</p>
 <center>
 <strong>3</strong>
 </center>
